KFSPTS-37938 add Supplier remit to connection shell